[package]
name = "graphyne"
version = "0.1.1"
edition = "2024"
description = "A simple rust client for sending messages to Graphite"
documentation = "https://docs.rs/graphyne"
readme = "README.md"
repository = "https://github.com/vultr/graphyne"
license = "Apache-2.0"
keywords = ["graphite", "metrics"]
categories = ["network-programming"]


[dependencies]
bon = "3.8.1"

[dev-dependencies]
insta = { version = "1.43.2", features = ["filters"] }
